# Ogitor-Facade

./: CMakeLists.txt
Dependencies/Caelum-0.5.0/main/: CMakeLists.txt
Dependencies/HYDRAX/Hydrax/src/Hydrax/: CMakeLists.txt
Dependencies/MeshMagick/: CMakeLists.txt
Dependencies/PagedGeometry/: CMakeLists.txt
Dependencies/SkyX/: CMakeLists.txt
FacadePlugins/Player/: CMakeLists.txt  PlayerControllerEditor.cpp  PlayerControllerEditor.h
Ogitor/: CMakeLists.txt
Ogitor/include/: BuildingEditor.h  CameraEditor.h  Ogitors.h  OgitorsPrerequisites.h  OgitorsRoot.h  OrthographicCameraEditor.h  ViewportEditor.h
Ogitor/src/: BuildingEditor.cpp  OFSSceneSerializer.cpp  OgitorsRoot.cpp  OgitorsRootUtilityFunctions.cpp  OgitorsUtils.cpp  OrthographicCameraEditor.cpp  ViewportEditor.cpp  ViewportEditorEvents.cpp
Plugins/DotSceneSerializer/: CMakeLists.txt
Plugins/OgCaelum/: CMakeLists.txt
Plugins/OgHydrax/: CMakeLists.txt
Plugins/OgMaterialEditor/: CMakeLists.txt
Plugins/OgModularZone/: CMakeLists.txt
Plugins/OgScriptEditor/: CMakeLists.txt  scriptview.cpp
Plugins/OgSkyx/: CMakeLists.txt
Plugins/ogQtExample/: CMakeLists.txt
qtOgitor/: CMakeLists.txt
qtOgitor/include/: mainwindow.hxx
qtOgitor/src/: main.cpp  mainwindow.cpp  mainwindowactions.cpp  ogrewidget.cpp  projectfilesview.cpp
